new proj/src/objects/GE_ES_Project__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_Outage_Type__c</fullName>
        <description>This is used for Site Outage Record Type</description>
        <label>Outage Type</label>
        <picklist>
            <picklistValues>
                <fullName>Boroscope Inspection (BI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combustion Inspection (CI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot Gas Path Inspection (HGPI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Overhaul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unplanned Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Outage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Probability__c</fullName>
        <label>Probability %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Proj_Global_Ind__c</fullName>
        <label>Project Global Industry</label>
        <picklist>
            <picklistValues>
                <fullName>FOOD_BEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEAVY OIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>METALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PETROCHEMICAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unconventional Resources</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Proj_Notes__c</fullName>
        <description>Comments from project meetings, deal reviews, etc</description>
        <inlineHelpText>Comments from project meetings, deal reviews, etc</inlineHelpText>
        <label>Project Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Project_Strategy__c</fullName>
        <inlineHelpText>Provide a clear and concise winning strategy for the overall project</inlineHelpText>
        <label>Project Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Win_Loss_Information__c</fullName>
        <description>Background information and contributing factors to wins and losses within this project</description>
        <inlineHelpText>Background information and contributing factors to wins and losses within this project</inlineHelpText>
        <label>Win/Loss Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Install_Country__c</fullName>
        <inlineHelpText>Where commercial operation will take place</inlineHelpText>
        <label>Install Country</label>
        <picklist>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAN SAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA AND BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA, PLURINATIONAL STATE OF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONAIR, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA AND HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTSWANA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_KA_Operator__c</fullName>
        <label>KA Operator</label>
        <picklist>
            <picklistValues>
                <fullName>GE ENERGY - ABU DHABI NATIONAL OIL COMPANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - ANADARKO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - APACHE CORPORATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - BP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - CHEVRON CORPORATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conoco PHILLIPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - ENI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - EXXON MOBIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - GAZPROM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - INGERSOLL RAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - MARATHON OIL CORPORATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - MUBADALA DEVELOPMENT COMPANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - NOBLE ENERGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - OCCIDENTAL PETROLEUM CORPORATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - PDVSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - PEMEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - PETROBRAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - PETROCHINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - PETRONAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - QATAR PETROLEUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - RIO TINTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - ROSNEFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - SAMSUNG GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - SAUDI ARAMCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - SHELL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - SINOPEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - STATOIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - TOTAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE ENERGY - VALE GROUP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_MCS_Industry_Type__c</fullName>
        <label>Industry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coal to Liquids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exploration &amp; Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas to Liquids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil&amp;Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petrochemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipelines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulp&amp;Paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refining/Integrated Petrochemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SubSea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_MCS_Project_Tier_3_P_L__c</fullName>
        <label>Project Tier 3 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Gasification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation &amp; Lifecycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outage Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations &amp; Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Plant Optimization (TPO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat Recovery Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waukesha Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jenbacher Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals &amp; Monitoring Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineered Systems (WES)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Water Solutions (IWS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS Electrical Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prolec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow &amp; Process Technologies (Dresser)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Masters_T_C_Agreement__c</fullName>
        <label>Masters T&amp;C Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_New_Capacity_Type__c</fullName>
        <label>New Capacity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Greenfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brownfield</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_PII_State__c</fullName>
        <label>Install State</label>
        <picklist>
            <controllingField>GE_OG_Install_Country__c</controllingField>
            <picklistValues>
                <fullName>ACRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALABAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAGOAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALASKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBERTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMAPÁ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMAZONAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARIZONA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARKANSAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian Capital Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRITISH COLUMBIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALIFORNIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEARÁ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLORADO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONNECTICUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELAWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISTRITO FEDERAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESPÍRITO SANTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLORIDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEORGIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOIÁS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAWAII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDAHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILLINOIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IOWA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KANSAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KENTUCKY</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_PO_Amount__c</fullName>
        <label>PO Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_OG_Project_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Country</label>
        <referenceTo>GE_HQ_Country__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Project_Industry__c</fullName>
        <label>Project Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unconventional Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Oil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Project_Stage__c</fullName>
        <label>Project Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-FEED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bid/Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Project_region__c</fullName>
        <label>O&amp;G Project Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East / North Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia &amp; CIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-saharan Africa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Block_Number__c</fullName>
        <label>Block Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Customer_DUNS_Number__c</fullName>
        <formula>GE_OG_SS_Customer_Name__r.GE_HQ_DUNS_Number__c</formula>
        <label>Customer DUNS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects (Customer Name)</relationshipLabel>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_EPC_Contract__c</fullName>
        <label>EPC Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Field_Name__c</fullName>
        <label>Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Field_Type__c</fullName>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_First_Oil_Date__c</fullName>
        <label>First Oil Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_GE_Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GE Project Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Global_Customer_Name__c</fullName>
        <formula>GE_OG_SS_Customer_Name__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Off_set_KM__c</fullName>
        <label>Off set (KM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Original_CRM_Opportunity_Num__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original CRM Opportunity Number</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Platform_FPSO__c</fullName>
        <label>Platform/FPSO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Tied_back_to__c</fullName>
        <label>Tied back to</label>
        <picklist>
            <picklistValues>
                <fullName>Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To shore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Type_of_Customer_Project__c</fullName>
        <label>Type of Customer Project</label>
        <picklist>
            <picklistValues>
                <fullName>Greenfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brownfield</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Waiting_Start_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiting Start up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Water_Depth_M__c</fullName>
        <label>Water Depth (M)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_SleProjFin__c</fullName>
        <inlineHelpText>To identify deals that need Sales &amp; Project Financing support</inlineHelpText>
        <label>Sales &amp; Project Financing</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Start_Engagement_Date__c</fullName>
        <label>Start Engagement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Mkt_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mkt Project</label>
        <referenceTo>GE_OG_TM_Mkt_Project__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Project_End_User_DUNS__c</fullName>
        <label>Project End User DUNS #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Project_End_User_Global_DUNS__c</fullName>
        <label>Project End User Global DUNS #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Project_End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects (Project End User)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Project_Location__c</fullName>
        <label>Project Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Tier2__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Tier_3_P_L__c</fullName>
        <label>Tier 3 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Reuter Stokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow &amp; Process Technologies (Dresser)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Services (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Line Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wayne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S - Logging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Subsea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Offshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Well Stream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS - Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Services (TS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Services (MS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oilfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Transmission</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Total_Cust_Project_Spend__c</fullName>
        <label>Total Cust Project Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>